--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,40 @@
     padding: 0px;
 }
 
+#title {
+    box-shadow: 2px 2px 10px black;
+}
+#fetch {
+    position: absolute;
+    top: 33.5%;
+    left: 43%;
+    box-shadow: 2px 2px 10px black;
+}
+
+.float-container {
+    padding: 20px;
+}
+
+.float-child {
+    float: left;
+    padding: 20px;
+    height: 30%;
+    background-color: white;
+}
+
+#section1 {
+    width: 50%;
+    box-shadow: 2px 2px 10px black;
+}
+#section2 {
+    width: 50%;
+    box-shadow: 2px 2px 10px black;
+}
+
 body{
     font-family: Arial, Helvetica, sans-serif;
+    background-color: grey;
+    /* background-image: url('kitchen.png'); */
 }
 
 p {
@@ -33,20 +65,4 @@ p {
 .description {
     text-align: center;
     padding: 4px;
-}
-
-button{
-    margin-top: 30px;
-    margin-bottom: 30px;
-    background-color: white;
-    border: 1px solid black;
-    padding: 5px;
-    border-radius: 5px;
-}
-
-button:hover{
-    background-color: black;
-    color: white;
-    transition: .3s;
-    cursor: pointer;
 }
