--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,14 @@
 
 #title {
     box-shadow: 2px 2px 10px black;
+    background-color: paleturquoise;
 }
 #fetch {
     position: absolute;
     top: 33.5%;
-    left: 43%;
+    left: 47%;
     box-shadow: 2px 2px 10px black;
+    background-color: palevioletred;
 }
 
 
@@ -29,7 +31,7 @@
     display:inline-block;
     padding: 20px;
     height: 30%;
-    background-color: white;
+    background-color: paleturquoise;
 }
 
 #section1 {
@@ -42,7 +44,8 @@
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
+    background-color: palegreen;
 }
 
 p {
@@ -55,6 +58,7 @@ p {
     border-radius: 10px;
     margin:30px;
     box-shadow: 2px 2px 10px black;
+    background-color: palegoldenrod;
 }
 
 .image img {
